Fix: openApi, priceSorting, search by name
