# openapi/products.yml
@@ -25,12 +25,16 @@ get:
         type: string
         enum: ["asc", "desc"]
     - in: query
-      name: id-list
-      description: "Array degli id dei prodotti che si vogliono ritornare"
+      name: search
       schema:
-        type: array
-        items:
-          type: string
+        type: string
+    # - in: query
+    #   name: id-list
+    #   description: "Array degli id dei prodotti che si vogliono ritornare"
+    #   schema:
+    #     type: array
+    #     items:
+    #       type: string
   responses:
     200:
       description: "product list"
@@ -45,7 +49,7 @@ get:
                 [
                   {
                     id: "123VF",
-                    productName: "gioco",
+                    name: "gioco",
                     description: "descrizione del prodotto",
                     primaryPhoto: /image.jpg,
                     secondaryPhotos:
@@ -53,7 +57,8 @@ get:
                         "/image.jpg",
                       ],
                     category: "games",
-                    netPrice: 5.99,
+                    netPrice: 10,
+                    price: 12.20,
                     tax: 22,
                     show: true,
                     showHome: false,
@@ -61,7 +66,7 @@ get:
                   },
                   {
                     id: "321VF",
-                    productName: "gioco2",
+                    name: "gioco2",
                     description: "descrizione del prodotto",
                     primaryPhoto: /image.jpg,
                     secondaryPhotos:
@@ -70,7 +75,8 @@ get:
                         "/image.jpg",
                       ],
                     category: "games",
-                    netPrice: 7.99,
+                    netPrice: 20,
+                    price: 22,
                     tax: 10,
                     show: true,
                     showHome: true,
@@ -107,7 +113,7 @@ post:
           $ref: "../schemas/products.json#/insertProduct"
         example:
           {
-            productName: "scarpe",
+            name: "scarpe",
             description: "queste sono delle bellissime scarpe",
             netPrice: 50.00,
             tax: 22,
